# .github

./: .gitignore  AUTHORS  README.md  index.js  main.py  package.json  pyproject.toml
datascheme/defined/: referentions.json
locate/: i18n.json
locate/DE/: TERMS_AND_POLICY_NOTICE.md
locate/ES/: TERMS_AND_POLICY_NOTICE.md
locate/PL/: TERMS_AND_POLICY_NOTICE.md
locate/RO/: TERMS_AND_POLICY_NOTICE.md
locate/RU/: TERMS_AND_POLICY_NOTICE.md  dictionary.json
locate/UA/: TERMS_AND_POLICY_NOTICE.md
